--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.19"
+    "@biomejs/biome": "2.3.10",
+    "@tailwindcss/typography": "^0.5.19",
+    "ultracite": "6.5.0"
   }
 }
